fix rendering height of channel navbar on mobile
this fixes a small rendering bug that we had with the channel navbar.
previously, it was rendering too tall on mobile and it looked weird (see
screenshots below). this fixes the issue.

closes #1843
pr #2014

--- a/static/scss/channel.scss
+++ b/static/scss/channel.scss
@@ -62,6 +62,10 @@
       padding: 5px 15px;
       margin: 0 5px;
     }
+
+    &:empty {
+      display: none;
+    }
   }
 }
 
